fix: Squashed bug with accordion icon triggering on info_pet_owner.html.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -119,6 +119,10 @@
   height: 0 !important;
 }
 
+.accordion-button:focus {
+  box-shadow: none !important;
+}
+
 .accordion-header {
   font-family: "Montserrat", sans-serif !important;
 }
